build_deploy.log
[0;34m=== Building and Deploying Contracts ===[0m

[1;33m=== Processing ERC20Token ===[0m
[0;32m✓ Copied Rust source[0m
[0;32m✓ Created project structure[0m
[0;34mBuilding ERC20Token...[0m
[0;32m✓ Build successful[0m
[0;34mDeploying ERC20Token to devnet...[0m
[0;32m✓ Deployment successful![0m
[0;32m  Contract Address: erd1qqqqqqqqqqqqqpgq6kh3vsrwmanz4tr8yxv6at4tacn2tym4gyts73t2ee[0m
[0;32m  Transaction Hash: e[0m
[0;34m  Explorer: https://devnet-explorer.multiversx.com/transactions/e[0m

[1;33m=== Processing Voting ===[0m
[0;32m✓ Copied Rust source[0m
[0;32m✓ Created project structure[0m
[0;34mBuilding Voting...[0m
[0;31m✗ Build failed[0m
Build log:
 /Users/kaan/Desktop/XTract/demo/voting

Found 1 contract crates.

(1/1)
In /Users/kaan/Desktop/XTract/demo/voting/meta
Calling `cargo run build`
   Compiling voting v0.1.0 (/Users/kaan/Desktop/XTract/demo/voting)
error[E0277]: cannot subtract `multiversx_sc::types::BigUint<<Self as multiversx_sc::contract_base::ContractBase>::Api>` from `&multiversx_sc::types::BigUint<<Self as multiversx_sc::contract_base::ContractBase>::Api>`
  --> /Users/kaan/Desktop/XTract/demo/voting/src/lib.rs:37:66
   |
37 |         self.proposal_created_event(&self.proposal_count().get() - BigUint::from(1u32));
   |                                                                  ^ no implementation for `&multiversx_sc::types::BigUint<<Self as multiversx_sc::contract_base::ContractBase>::Api> - multiversx_sc::types::BigUint<<Self as multiversx_sc::contract_base::ContractBase>::Api>`
   |
   = help: the trait `Sub<multiversx_sc::types::BigUint<<Self as multiversx_sc::contract_base::ContractBase>::Api>>` is not implemented for `&multiversx_sc::types::BigUint<<Self as multiversx_sc::contract_base::ContractBase>::Api>`
help: consider removing the borrow
   |
37 -         self.proposal_created_event(&self.proposal_count().get() - BigUint::from(1u32));
37 +         self.proposal_created_event(self.proposal_count().get() - BigUint::from(1u32));
   |

For more information about this error, try `rustc --explain E0277`.
error: could not compile `voting` (lib) due to 1 previous error

thread 'main' panicked at /Users/kaan/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/multiversx-sc-meta-0.62.1/src/cmd/all.rs:59:5:
contract meta process failed
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
[1;33m=== Processing Crowdfunding ===[0m
[0;32m✓ Copied Rust source[0m
[0;32m✓ Created project structure[0m
[0;34mBuilding Crowdfunding...[0m
[0;31m✗ Build failed[0m
Build log:
 /Users/kaan/Desktop/XTract/demo/crowdfunding

Found 1 contract crates.

(1/1)
In /Users/kaan/Desktop/XTract/demo/crowdfunding/meta
Calling `cargo run build`
   Compiling crowdfunding v0.1.0 (/Users/kaan/Desktop/XTract/demo/crowdfunding)
error: custom attribute panicked
 --> /Users/kaan/Desktop/XTract/demo/crowdfunding/src/lib.rs:5:1
  |
5 | #[multiversx_sc::contract]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: only 1 data argument allowed in event log

warning: unused import: `multiversx_sc::imports::*`
 --> /Users/kaan/Desktop/XTract/demo/crowdfunding/src/lib.rs:3:5
  |
3 | use multiversx_sc::imports::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: `crowdfunding` (lib) generated 1 warning
error: could not compile `crowdfunding` (lib) due to 1 previous error; 1 warning emitted

thread 'main' panicked at /Users/kaan/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/multiversx-sc-meta-0.62.1/src/cmd/all.rs:59:5:
contract meta process failed
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
[1;33m=== Processing NFTMarketplace ===[0m
[0;32m✓ Copied Rust source[0m
[0;32m✓ Created project structure[0m
[0;34mBuilding NFTMarketplace...[0m
[0;32m✓ Build successful[0m
[0;34mDeploying NFTMarketplace to devnet...[0m
